@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r2p12
+  {
+    Modules = LHCbDIRAC:v9r2p12, LHCbWebDIRAC:v4r4p11
+    Depends = DIRAC:v6r20p25
+    LcgVer = v14r2
+  }
+
   v9r2p11
   {
     Modules = LHCbDIRAC:v9r2p11, LHCbWebDIRAC:v4r4p11
