@@ -1,3 +1,12 @@
+[v9r2p12]
+use DIRAC v6r20p25
+
+* allowing more than 1 type of simulation productions
+* fix typos
+* fix pylint issues
+* make python 3 compatible
+* allow to create POOL XML catalog
+
 [v9r2p11]
 use DIRAC v6r20p22
 
